Atualização de links no footer

--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
     <footer>
         <p class="marcaRegistrada">© 2025 Allana Fiorito • Tecnologia com olhar humano</p>
         <nav>
-            <a href="" class="gitHub">Git Hub</a> •
-            <a href="" class="LinkedIn">LinkedIn</a> •
-            <a href="" class="email">E-mail</a> •
-            <a href="" class="Instagram">Instagram</a> •
-            <a href="" class="artStation">ArtStation</a>
+            <a href="https://github.com/Allana-Fiorito" class="gitHub">Git Hub</a> •
+            <a href="https://www.linkedin.com/in/allana-fiorito-8ba719158/" class="LinkedIn">LinkedIn</a> •
+            <a href="mailto:allana.fiorito@gmail.com" class="email">E-mail</a> •
+            <a href="https://www.instagram.com/allana_fiorito/" class="Instagram">Instagram</a> •
+            <a href="https://www.artstation.com/allana_fiorito" class="artStation">ArtStation</a>
         </nav>
         <p>Construído com HTML, CSS e JavaScript</p>
     </footer>
