--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
                 <a href="contato.html">CONTATO</a>
             </div>
         </nav>
-        <div class="headerTxt">
+        <div class="header">
             <div>
-                <p class="titulo"><h1>Allana Fiorito
+                <p><h1>Allana Fiorito
                 </h1></p>
                 <p class="slogan"><h4>Tecnologia com olhar humano</h4></p>
             </div>
-            <div class="headerFoto"></div> <!--Para posicionar a foto-->
+            <div class="foto"></div> <!--Para posicionar a foto-->
         </div>
     </header>
     <main class="main1">
@@ -30,13 +30,13 @@
         </div>
         <div class="sessoes">
             <section class="section1">
-                <p>Catálogo no-code (WIP)</p>
+                <p>Catálogo no-code (Em construção)</p>
                 <a href="https://batatasdoespaco.meloja.com.br/">
                     <div class="sctDiv1"></div>
                 </a>
             </section>
             <section class="section2">
-                <p>LandingPage (WIP)</p>
+                <p>LandingPage (Em construção)</p>
                 <a href="https://allana-fiorito.github.io/Landing-Page-WIP/">
                     <div class="sctDiv2"></div>
                 </a>
@@ -72,7 +72,7 @@
                 </a>
             </section>
             <section class="section8">
-                <p>Página de produto LealPhone (Em Breve!)</p> <!--Adicionar link!-->
+                <p>(Em Breve) Página de produto LealPhone</p> <!--Adicionar link!-->
                 <a href=""></a>
                 <div class="sctDiv8"></div>
             </section>
