--- a/sobreMim.html
+++ b/sobreMim.html
@@ -15,18 +15,26 @@
                 <a href="contato.html">CONTATO</a>
             </div>
         </nav>
-        <div class="headerTxt">
-            <div class="headerFoto"></div> <!--Para posicionar a foto-->
+        <div class="headerFoto">
+            <div class="foto2"></div> <!--Para posicionar a foto-->
         </div>
     </header>
     <main class="main2">
         <div>
             <p class="titulo"><strong>BIOGRAFIA</strong></p>
-            <p>Desde pequena tive muito interesse por arte e conhecimentos sobre como o mundo funciona em geral. Em 2018 concluí a minha formação em Design de Games, e foi neste curso que me despertou o interesse em trabalhar com ilustração e arte conceitual. Entre 2024 e 2025 tive a oportunidade de fazer um curso de Programador de Sistemas e outro de Web Design, e atualmente tenho o objetivo de trabalhar em áreas onde posso contribuir com os conhecimentos que adquiri sobre design, arte e tecnologia, além de continuar aprendendo.</p>
+            <p class="paragrafo">Desde pequena tive muito interesse por arte e conhecimentos sobre como o mundo funciona em geral. Em 2018 concluí a minha formação em Design de Games, e foi neste curso que me despertou o interesse em trabalhar com ilustração e arte conceitual. Entre 2024 e 2025 tive a oportunidade de fazer um curso de Programador de Sistemas e outro de Web Design, e atualmente tenho o objetivo de trabalhar em áreas onde posso contribuir com os conhecimentos que adquiri sobre design, arte e tecnologia, além de continuar aprendendo.</p>
             <p class="titulo"><strong>HABILIDADES</strong></p>
-            <p>Arte digital, lógica de programação, HTML, CSS, JavaScript, trabalho em equipe e pensamento crítico.</p>
+            <ul>
+                <li>Arte digital</li>
+                <li>lógica de programação</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+                <li>trabalho em equipe</li>
+                <li>pensamento crítico</li>
+            </ul>
             <p class="titulo"><strong>OBJETIVOS PROFISSIONAIS</strong></p>
-            <p>Contribuir com o desenvolvimento de projetos na área da tecnologia, aplicando conhecimentos sobre arte digital, programação e web design. Procuro contribuir para a realização de trabalhos em equipe e melhorar tanto como pessoa como profissional, além de adquirir mais conhecimento e habilidades técnicas sobre o arte, design e tecnologia da informação.</p>
+            <p class="paragrafo">Contribuir com o desenvolvimento de projetos na área da tecnologia, aplicando conhecimentos sobre arte digital, programação e web design. Procuro contribuir para a realização de trabalhos em equipe e melhorar tanto como pessoa como profissional, além de adquirir mais conhecimento e habilidades técnicas sobre o arte, design e tecnologia da informação.</p>
         </div>
     </main>
     <footer>
